sales cross check

--- a/templates/base.html
+++ b/templates/base.html
@@ -130,6 +130,7 @@
                   <ul class="dropdown-menu" aria-labelledby="salesDropdown">
                     <li><a class="dropdown-item" href="{% url 'clients:all_sales' %}">All Sales</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:admin_add_sale' %}">Add Sale</a></li>
+                    <li><a class="dropdown-item" href="{% url 'clients:approve_sales' %}">Approve Sales</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:manage_incentive_rules' %}">Incentive Rules</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:recalc_points' %}">Recalculate Points</a></li>
                     <li><a class="dropdown-item" href="{% url 'clients:client_analysis' %}">Client Analysis</a></li>
